<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context="com.ikolilu.ikolilu.portal.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/logo_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"

            android:layout_marginTop="74dp"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_text"
            android:foregroundGravity="center"
            android:id="@+id/imageView2" />

        <RelativeLayout
            android:layout_below="@id/imageView"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"
            android:padding="20dp"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:drawableRight="@drawable/ic_action_email"
                android:textColorHint="@color/colorAccent"
                android:lines="1"
                android:singleLine="true"
                android:hint="@string/email_hint"
                android:padding="10sp"
                android:background="@drawable/rounded_edittext"
                android:layout_weight="0.75"/>

            <EditText
                android:layout_below="@id/email"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPassword"
                android:drawableRight="@drawable/ic_action_lock"
                android:hint="@string/password_hint"
                android:padding="10sp"
                android:background="@drawable/rounded_edittext"
                android:layout_weight="0.75"/>

            <Button
                android:layout_below="@id/password"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:textColor="#FFF"
                android:textSize="18sp"

                android:background="@drawable/round_thick_rect"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/login_btn" />

            <Button
                android:layout_below="@id/login_btn"
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/round_border_rect"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/register_btn"
                 />

            <TextView
                android:layout_below="@id/register_btn"
                android:id="@+id/forget_pass"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forget_pass"/>

        </RelativeLayout>

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
