<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context="com.ikolilu.ikolilu.portal.RegisterActivity"
    tools:layout_editor_absoluteY="25dp"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"

            android:layout_marginTop="74dp"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/register_text"
            android:foregroundGravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginTop="110dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="0.75"
                android:lines="1"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_action_person"
                android:padding="10sp"
                android:hint="@string/fullname"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_weight="0.75"
                android:lines="1"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_action_email"
                android:hint="@string/email_hint"
                android:padding="10sp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_weight="0.75"
                android:lines="1"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_action_phone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10sp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:singleLine="true"
                android:layout_weight="0.75"
                android:background="@drawable/rounded_edittext"
                android:drawableRight="@drawable/ic_action_lock"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10sp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <!--<TextView-->
                <!--android:id="@+id/verifyby_title"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--android:layout_below="@+id/password"-->
                <!--android:text="Verify account using:" />-->

            <!--<Spinner-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:id="@+id/verifyby"-->
                <!--android:padding="10sp"-->
                <!--android:drawableRight="@drawable/ic_lookup"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_below="@+id/verifyby_title"-->
                <!--android:background="@drawable/rounded_edittext"-->
                <!--android:entries="@array/verify_array"/>-->

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@id/password"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_thick_rect"
                android:hint="@string/register_btn"
                android:textColorHint="@color/colorWhite"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/linktologin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_btn"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/already_account"
                android:textColor="@color/colorAccent" />


        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>





</RelativeLayout>
