<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ikolilu.ikolilu.portal.DashboardActivity"
    android:background="#fcfcfc">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="130dp"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--<include-->
            <!--layout="@layout/navigation_action"-->
            <!--android:layout_height="wrap_content" android:layout_width="match_parent"/>-->

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/colappsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_scrollFlags="exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"

            app:title="Hey Kwesi,"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:background="@drawable/dashboard"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarid"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <GridLayout
            android:background="@color/colorWhite"
            android:id="@+id/mainGrid"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp"
            >

            <!-- Column 1 -->
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/getstarted"
                android:layout_width="130dp"
                android:layout_height="250dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                >

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="true"
                android:gravity="center"

                android:orientation="vertical">

                <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/cirlclebackgroundpurple"
                android:padding="10dp"
                android:src="@drawable/ic_info_black_24dp" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/get_started"
                android:textStyle="bold" />

                <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/lightgray" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/learn_how_to_use_the_app"
                android:textColor="@android:color/darker_gray" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!-- Column 2 -->
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/dashboard"
                android:layout_width="130dp"
                android:layout_height="250dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardElevation="8dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="true"
                    android:gravity="center"

                    android:orientation="vertical">

                <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circlebackgroundyello"
                android:src="@drawable/ic_dashboard_black_24dp"
                android:padding="10dp"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/dashboard"/>
                <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="10dp" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/explore_app"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/settings"
                android:layout_width="130dp"
                android:layout_height="250dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardElevation="8dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                >
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circlebackgroundgreen"
                android:src="@drawable/ic_setup"
                android:padding="10dp"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/setup"/>
                <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="10dp" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/application_setup"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/logout"
                android:layout_width="130dp"
                android:layout_height="250dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardElevation="8dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                >

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circlebackgroundpink"
                android:src="@drawable/ic_power_settings_new_black_24dp"
                android:padding="10dp"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/logout"/>


                <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="10dp" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exit_app"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </GridLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
